examples/__tests__/__snapshots__/30_gql/gql_gql-string_gql-typed__gql-string-typed.snap
/some/path/to/runPipeline.ts:XX
          return new ContextualError(message, { hookName: signal.hookName, source: signal.source }, signal.error)
                 ^

ContextualError: There was an error in the core implementation of hook "exchange".
    at runPipeline (/some/path/to/runPipeline.ts:XX:XX)
    at process.processTicksAndRejections (node:internal/process/task_queues:XX:XX)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:XX)
    at async runPipeline (/some/path/to/runPipeline.ts:XX:XX)
    at async <anonymous> (/some/path/to/runner.ts:XX:XX)
    at async Module.run (/some/path/to/run.ts:XX:XX)
    at async sendRequest (/some/path/to/send.ts:XX:XX)
    at async <anonymous> (/some/path/to/gql_gql-string_gql-typed__gql-string-typed.ts:XX:XX) {
  cause: TypeError: fetch failed
      at node:internal/deps/undici/undici:XX:XX
      at process.processTicksAndRejections (node:internal/process/task_queues:XX:XX)
      at async Object.run (/some/path/to/TransportHttp.ts:XX:XX)
      at async runStep (/some/path/to/runStep.ts:XX:XX) {
    [cause]: AggregateError [ECONNREFUSED]: 
        at internalConnectMultiple (node:net:XX:XX)
        at afterConnectMultiple (node:net:XX:XX) {
      code: 'ECONNREFUSED',
      [errors]: [
        Error: connect ECONNREFUSED ::1:3000
            at createConnectionError (node:net:XX:XX)
            at afterConnectMultiple (node:net:XX:XX) {
          errno: -61,
          code: 'ECONNREFUSED',
          syscall: 'connect',
          address: '::1',
          port: 3000
        },
        Error: connect ECONNREFUSED 127.0.0.1:3000
            at createConnectionError (node:net:XX:XX)
            at afterConnectMultiple (node:net:XX:XX) {
          errno: -61,
          code: 'ECONNREFUSED',
          syscall: 'connect',
          address: '127.0.0.1',
          port: 3000
        }
      ]
    }
  },
  context: { hookName: 'exchange', source: 'implementation' }
}

Node.js vXX.XX.XX